Fixes in Model Checker